# MelonLoader

./: .gitignore  ANDROID.md  Cargo.toml  README.md
Dependencies/SupportModules/Il2Cpp/: Main.cs
MelonLoader/: MelonUtils.cs
MelonLoader/Melons/: MelonBase.cs  MelonHandler.cs
MelonLoader/Preferences/: MelonPreferences.cs  MelonPreferences_Entry.cs
MelonLoader/Utils/: MelonLogger.cs
Rust/MelonBootstrap/: Cargo.toml
Rust/MelonBootstrap/src/dotnet/: startup.rs
Rust/UnityAndroidProxy/src/impl_android/: nativeloader.rs
