[workspace]
members = ["Rust/MelonProxy", "Rust/MelonBootstrap", "Rust/UnityAndroidProxy"]
resolver = "2"

# TODO: this should only be needed when the target is android, may break otherwise but i cant set it to only be used for android
# target.'cfg(target_os = "android")'.
[patch.crates-io]
nethost-sys = { git = "https://github.com/TrevTV/nethost-sys" }